[package]
name = "malloc_size_of"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
publish = false

[lib]
path = "lib.rs"

[dependencies]
app_units = { git = "https://github.com/victorporof/app_units.git", branch = "0.5.5-heapsize" }
cssparser = { git = "https://github.com/victorporof/rust-cssparser.git", branch = "0.21.1-heapsize" }
euclid = { git = "https://github.com/victorporof/euclid.git", branch = "0.15-heapsize" }
hashglobe = { path = "../hashglobe" }
servo_arc = { path = "../servo_arc" }
smallbitvec = "1.0.3"
smallvec = "0.4"
