[package]
name = "malloc_size_of"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
publish = false

[lib]
path = "lib.rs"

[features]
servo = ["with_js", "with_string_cache", "with_url", "with_webrender", "with_xml5ever"]
with_js = ["mozjs"]
with_string_cache = ["string_cache"]
with_url = ["url"]
with_webrender = ["webrender_api"]
with_xml5ever = ["xml5ever"]

[dependencies]
app_units = "0.6"
cssparser = "0.23.0"
euclid = "0.16"
hashglobe = { path = "../hashglobe" }
mozjs = { version = "0.1.8", features = ["promises"], optional = true }
servo_arc = { path = "../servo_arc" }
smallbitvec = "1.0.3"
smallvec = "0.6"
string_cache = { version = "0.7", optional = true }
url = { version = "1.2", optional = true }
webrender_api = { git = "https://github.com/servo/webrender", features = ["ipc"], optional = true }
xml5ever = { version = "0.12", optional = true }
