[package]
name = "style_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "style_traits"
path = "lib.rs"

[features]
servo = ["heapsize", "heapsize_derive", "serde", "servo_atoms", "cssparser/heapsize", "cssparser/serde", "webrender_api"]
gecko = []

[dependencies]
app_units = { git = "https://github.com/victorporof/app_units.git", branch = "0.5.5-heapsize" }
bitflags = "0.7"
cssparser = { git = "https://github.com/victorporof/rust-cssparser.git", branch = "0.21.1-heapsize" }
euclid = { git = "https://github.com/victorporof/euclid.git", branch = "0.15-heapsize" }
heapsize = { git = "https://github.com/victorporof/heapsize.git", branch = "0.4.1-heapsize", optional = true }
heapsize_derive = {version = "0.1", optional = true}
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { path = "../malloc_size_of_derive" }
selectors = { path = "../selectors" }
serde = {version = "1.0", optional = true}
webrender_api = {git = "https://github.com/servo/webrender", optional = true}
servo_atoms = {path = "../atoms", optional = true}
